# wordsplit

./: .gitignore  CMakeLists.txt  README.md  wordsplit.c  wordsplit.h
.github/workflows/: ci.yml
tests/: wordsplit_analyze.sh  wordsplit_fuzz.c  wordsplit_test.c
tests/corpus/: flags.txt  fox.txt  merge.txt  multi.txt  quoted.txt
